--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
     "sequelize": "^6.19.0",
-    "socket.io": "^4.5.0"
+    "socket.io": "^4.5.0",
+    "sqlite3": "^5.0.6"
   }
 }
