--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "sequelize": "^6.19.0",
